Adding Redis integration for reservation payment simulation and refactoring ReservationStatus